
[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytlsd"
version = "0.0.5"
description = "Transparent bindings of LSD (Line Segment Detector)"
authors = [
    {name = "Iago Suarez", email = "iagoh92@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.19.5",
]

[project.optional-dependencies]
test = [
    "pytest>=6.0",
    "opencv-python>=4.5.2.54",
    "scipy>=1.5.4",
    "scikit-image>=0.17.2",
]

[project.urls]
Homepage = "https://github.com/yuki-inaho/pytlsd"
Repository = "https://github.com/yuki-inaho/pytlsd.git"
Original = "https://github.com/iago-suarez/pytlsd"

[tool.mypy]
files = "setup.py"
python_version = "3.9"
strict = true
show_error_codes = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["ninja"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
testpaths = ["tests"]

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts
before-build = "rm -rf {project}/build"

[tool.ruff]
extend-exclude = ["pybind11"]
line-length = 120
